# ren

./: README.md  setup.cfg  setup.py
.github/workflows/: publish-python.yml
scripts/: completion_bash.py  completion_fish.py  completion_zsh.py
