[metadata]
name = ren-cli
version = 0.1.3
project_urls =
    Source = https://github.com/Alanaktion/ren
description = Utility to rename fies and directories

[options]
packages = ren
python_requires = >=3.4

[options.extras_require]
emoji =
    emoji
format =
    gallery_dl

[options.entry_points]
console_scripts =
    ren = ren.ren:main
